Theme: fix multi-line overflow scroll

--- a/themes/custom/assets/css/main.css
+++ b/themes/custom/assets/css/main.css
@@ -82,9 +82,6 @@ time {
 
 pre {
   padding: 10px;
-}
-
-code span span {
   overflow: scroll;
 }
 
